# fantastical-cli

./: .gitignore  LICENSE.md  README.md  fantastical-cli.py  fantastical_cli.py  pyproject.toml
