[build-system]
requires = ["setuptools>=58.1"]
build-backend = "setuptools.build_meta"

[project]
name = "fantastical-cli"
version = "0.1.0"
description = "An (unofficial) command-line interface for adding events to Fantastical."
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE.md" } # Add a LICENSE file if you have one
authors = [
    { name = "Jason L. Causey" },
]
dependencies = [
    # No external dependencies
]

[project.scripts]
fantastical-cli = "fantastical_cli:main"

[tool.setuptools]
py-modules = ["fantastical_cli"]
